--- a/sass/rdcom.scss
+++ b/sass/rdcom.scss
@@ -1,3 +1,12 @@
+@charset "utf-8";
+/*! bulma.io v0.5.1 | MIT License | github.com/jgthms/bulma */
+@import "../node_modules/bulma/sass/utilities/_all";
+@import "../node_modules/bulma/sass/base/_all";
+@import "../node_modules/bulma/sass/elements/_all";
+@import "../node_modules/bulma/sass/components/_all";
+@import "../node_modules/bulma/sass/grid/_all";
+@import "../node_modules/bulma/sass/layout/_all";
+
 .header-wrapper{
   h1{
     border-bottom: 4px solid black;
