Testing content and layout

--- a/rdcom_website/templates/layout.html
+++ b/rdcom_website/templates/layout.html
@@ -12,7 +12,11 @@
 <div class="section">
     <div class="container is-fluid">
         <div class="columns">
-            <div class="column is-narrow"><img src="http://via.placeholder.com/150x150"></div>
+            <div class="column is-narrow">
+                <figure class="image">
+                    <img src="http://via.placeholder.com/150x150">
+                </figure>
+            </div>
             <div class="column">
                 <div class="content">
                     <h1>Hello!</h1>
@@ -20,7 +24,40 @@
                     <p>My passion is to bring great ideas to life through modern, lean and flexible code.</p>
                     <p>But great ideas needs also great environments to grow, and I love to use my psychology skills to build them.</p>
                     <p>Making customers and coworkers happy will help you and your product to be and to stay successful :)</p>
-                    <p>You can find more about me on <a href="">linkedin</a> and <a href="">twitter</a>.</p>
+                    <p>You can find more about me on <a href="">linkedin</a> and <a href="">github</a>.</p>
+                </div>
+                <div class="content">
+                    <h2>Currently active projects</h2>
+                    <ul id="active-projects">
+                        <li>
+                            <p>
+                                <span class="project-title">Waboot</span>
+                                A flexible multi-purpose Wordpress theme with a lot of cool ideas.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <span class="project-title">Waboot Framework</span>
+                                A full-fledged, modular framework to make the Wordpress development enjoyable.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <span class="project-title">In-dev react native app</span>
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="content">
+                    <h2>Recent articles</h2>
+                    <ul id="recent-articles">
+                        <li>1 - How to...</li>
+                        <li>2 - The...</li>
+                    </ul>
+                    <a href="" class="button is-outlined">
+                        More articles&nbsp;&nbsp;
+                        <span class="icon is-small"><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
+                    </a>
                 </div>
             </div>
         </div>
