--- a/sass/rdcom.scss
+++ b/sass/rdcom.scss
@@ -11,6 +11,22 @@
 
 @import "typography";
 
+ul#active-projects{
+  li{
+    margin-bottom: 1em;
+    span.project-title{
+      display: block;
+      margin-bottom: 0.3em;
+      @extend .title;
+      @extend .is-6;
+    }
+    p{
+      display: inline-block;
+      vertical-align: middle;
+    }
+  }
+}
+
 .header-wrapper{
   h1{
     border-bottom: 4px solid black;
