--- a/rdcom_website/templates/article.html
+++ b/rdcom_website/templates/article.html
@@ -12,7 +12,7 @@
             <h1>{{ article.title }}</h1>
         </div>
         <div class="content">
-            {{ article_content }}
+            {{ article_content | safe }}
         </div>
     </div>
 </div>
