--- a/rdcom_website/templates/layout.html
+++ b/rdcom_website/templates/layout.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="section">
-    <div class="container is-fluid">
+    <div class="container is-fluid {{ page_type_class }}">
         {% block content %}{% endblock %}
     </div>
 </div>
