--- a/rdcom_website/templates/blog.html
+++ b/rdcom_website/templates/blog.html
@@ -3,18 +3,28 @@
 {% block content %}
 <div class="columns">
     <div class="column is-narrow">
-        <figure class="image">
+        <figure class="image is-150x150">
             <img src="http://via.placeholder.com/150x150">
         </figure>
     </div>
     <div class="column">
+        <nav class="breadcrumb" aria-label="breadcrumbs">
+            <ul>
+            {% for bc_entry in breadcrumb %}
+                <li {% if(bc_entry[3]) %}class="is-active"{% endif %}><a href="{{ bc_entry[2] }}">{{ bc_entry[0] }}</a></li>
+            {% endfor %}
+            </ul>
+        </nav>
         <div class="content">
             <h1>{{ page_title }}</h1>
         </div>
         {% for article in articles %}
         <div class="content article" data-n="{{ loop.index0 }}">
             <h2><a href="{{ url_for('article', post_name=article.name) }}">{{ article.title }}</a></h2>
-            {{ article.content | truncate(50) | safe }}
+            {{ article.content | truncate(255) | safe }}
+            <p>
+                <a href="{{ url_for('article', post_name=article.name) }}">Read the rest of the article</a>
+            </p>
         </div>
         {% endfor %}
     </div>
