--- a/sass/rdcom.scss
+++ b/sass/rdcom.scss
@@ -1,15 +1,17 @@
 @charset "utf-8";
+
 /*! bulma.io v0.5.1 | MIT License | github.com/jgthms/bulma */
-@import "../node_modules/bulma/sass/utilities/_all";
-@import "../node_modules/bulma/sass/base/_all";
-@import "../node_modules/bulma/sass/elements/_all";
-@import "../node_modules/bulma/sass/components/_all";
-@import "../node_modules/bulma/sass/grid/_all";
-@import "../node_modules/bulma/sass/layout/_all";
+@import "../node_modules/bulma/sass/utilities/initial-variables";
+
+// Custom variables
+$dimensions: 16 24 32 48 64 96 128 150;
+
+@import "../node_modules/bulma/bulma";
 
 /*! Website styles */
 
 @import "typography";
+@import "blog";
 
 ul#active-projects{
   li{
