--- a/rdcom_website/templates/index.html
+++ b/rdcom_website/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="columns">
     <div class="column is-narrow">
-        <figure class="image">
+        <figure class="image is-150x150">
             <img src="http://via.placeholder.com/150x150">
         </figure>
     </div>
