--- a/rdcom_website/templates/index.html
+++ b/rdcom_website/templates/index.html
@@ -3,9 +3,11 @@
 {% block content %}
 <div class="columns">
     <div class="column is-narrow">
-        <figure class="image is-150x150">
-            <img src="http://via.placeholder.com/150x150">
-        </figure>
+        <div class="section-thumb">
+            <span>RD</span>
+            <span>dot</span>
+            <span>com</span>
+        </div>
     </div>
     <div class="column">
         <div class="content">
