--- a/rdcom_website/templates/article.html
+++ b/rdcom_website/templates/article.html
@@ -19,6 +19,7 @@
         </nav>
         <div class="content">
             <h1 class="article-title">{{ article.title }}</h1>
+            <p><em>Posted on: {{ article.real_date.strftime('%m/%d/%Y') }}</em></p>
         </div>
         <div class="content article-content">
             {{ article_content | safe }}
